<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mollie.checkout.feature.payments.create.CreatePaymentViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_16">

            <TextView
                style="@style/AppTheme.TextView.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_payment_description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_24"
                android:hint="@string/create_payment_hint_amount"
                app:prefixText="€">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTheme.TextInput.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:hint="@string/create_payment_hint_description">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTheme.TextInput.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <ProgressBar
            visible="@{viewModel.isLoading()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>