<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mollie.checkout.feature.payments.PaymentsViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_payment" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <LinearLayout
            visible="@{!viewModel.isLoading() &amp;&amp; viewModel.paymentItems.empty}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space_32"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.TextView.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payments_empty_title" />

            <TextView
                style="@style/AppTheme.TextView.Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:gravity="center_horizontal"
                android:text="@string/payments_empty_description" />

            <Button
                android:id="@+id/create_first_payment"
                style="@style/AppTheme.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:text="@string/payments_create_new" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/create_payment"
            style="@style/AppTheme.Button.FloatingActionButton"
            gone="@{viewModel.isLoading() || viewModel.paymentItems.empty}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/space_16"
            app:srcCompat="@drawable/ic_add" />
    </FrameLayout>
</layout>