<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mollie.checkout.feature.payments.selectcheckout.SelectCheckoutViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            style="@style/AppTheme.TabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabIconTint="@color/tab_icon">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_layout_list" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_layout_grid" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/footer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/space_8"
                android:paddingRight="@dimen/space_8"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:itemCount="4"
                tools:listitem="@layout/item_method_grid" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <LinearLayout
            visible="@{!viewModel.isLoading() &amp;&amp; viewModel.methods.empty}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space_32"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/AppTheme.TextView.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_method_empty_title" />

            <TextView
                style="@style/AppTheme.TextView.Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12"
                android:text="@string/select_method_empty_description" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_32"
            android:paddingTop="@dimen/space_20"
            android:paddingEnd="@dimen/space_32"
            android:paddingBottom="@dimen/space_20"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible">

            <Button
                android:id="@+id/proceed"
                style="@style/AppTheme.Button.Colored"
                invisible="@{viewModel.isSaving()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_continue" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>